# tokenizer-intrinsic-evals

./: .gitignore  pyproject.toml
configs/: bne_vs_bpe.json  climbmix_large_lang_config.json  climbmix_mini_lang_config.json  language_config.json
results/bne_vs_bpe_words_large/: analysis_results.json  analysis_results_full.json
results/bne_vs_bpe_words_mini/: analysis_results.json
results/bne_vs_bpe_words_regular/: analysis_results.json  analysis_results_full.json
scripts/: BNE_vs_BPE_large.sh  BNE_vs_BPE_mini.sh  BNE_vs_BPE_regular.sh
source_data/tokenizers/BNE/128k/: token_bytes.pt
source_data/tokenizers/BNE/16k/: token_bytes.pt  tokenizer.json
source_data/tokenizers/BNE/1k/: token_bytes.pt  tokenizer.json
source_data/tokenizers/BNE/256k/: token_bytes.pt
source_data/tokenizers/BNE/2k/: tokenizer.json
source_data/tokenizers/BNE/32k/: token_bytes.pt  tokenizer.json
source_data/tokenizers/BNE/4k/: tokenizer.json
source_data/tokenizers/BNE/64k/: token_bytes.pt
source_data/tokenizers/BNE/8k/: token_bytes.pt  tokenizer.json
source_data/tokenizers/BPE/128k/: token_bytes.pt
source_data/tokenizers/BPE/16k/: token_bytes.pt  tokenizer.json
source_data/tokenizers/BPE/1k/: tokenizer.json
source_data/tokenizers/BPE/256k/: token_bytes.pt
source_data/tokenizers/BPE/2k/: token_bytes.pt  tokenizer.json
source_data/tokenizers/BPE/32k/: token_bytes.pt  tokenizer.json
source_data/tokenizers/BPE/4k/: tokenizer.json
source_data/tokenizers/BPE/64k/: token_bytes.pt
source_data/tokenizers/BPE/8k/: token_bytes.pt  tokenizer.json
